--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -7,13 +7,13 @@ a{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .img{
-    border-radius:25px;
-    height:300px;
     display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:50%; 
-    float:right;  
+    margin:auto;
+    max-width:100%;
+    width:300px;
+    height:300;
+    border-radius:10px;
+    transition: transform 0.5s;
 
 }
 .desc-content{
@@ -34,5 +34,15 @@ a{
     color:rgb(108, 50, 23);
 }
 .r1{
-
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.r1-img{
+    display:block;
+    margin:auto;
+    max-width:100%;
+    width:300px;
+    height:250px;
+    border-radius:10px;
+    transition: transform 0.5s;
+    float:right;
 }
