--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 :root{
-    background-color:rgb(223, 117, 117);
+    background:linear-gradient( rgb(250, 50, 50) 5%, 
+                                rgb(210, 126, 126))
+    
 }
 a{
     text-decoration:none;
@@ -9,9 +11,8 @@ a{
 .img{
     display:block;
     margin:auto;
-    max-width:100%;
-    width:300px;
-    height:300;
+    max-width:35%;
+    height:auto;
     border-radius:10px;
     transition: transform 0.5s;
 
@@ -45,4 +46,17 @@ a{
     border-radius:10px;
     transition: transform 0.5s;
     float:right;
+}
+.johndoe{
+    text-align:center;
+    font-family: Poppins;
+    color:rgb(108, 50, 23);
+}
+.r1-content-l{
+    margin-right:20px;
+}
+.footer{
+    font-size:10px;
+    text-align:center;
+    
 }
